y.output

state 0
	$accept: .list $end 
	list: .    (1)

	.  reduce 1 (src line 31)

	list  goto 1

state 1
	$accept:  list.$end 
	list:  list.'\n' 
	list:  list.asgn '\n' 
	list:  list.stmt '\n' 
	list:  list.expr '\n' 
	list:  list.error '\n' 

	$end  accept
	error  shift 6
	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	PRINT  shift 8
	WHILE  shift 17
	IF  shift 18
	'-'  shift 14
	NOT  shift 16
	'\n'  shift 2
	'{'  shift 11
	'('  shift 12
	.  error

	expr  goto 5
	asgn  goto 3
	stmt  goto 4
	while  goto 9
	if  goto 10

state 2
	list:  list '\n'.    (2)

	.  reduce 2 (src line 32)


3: shift/reduce conflict (shift 19(0), red'n 32(0)) on '\n'
state 3
	list:  list asgn.'\n' 
	expr:  asgn.    (32)

	'\n'  shift 19
	.  reduce 32 (src line 106)


state 4
	list:  list stmt.'\n' 

	'\n'  shift 20
	.  error


5: shift/reduce conflict (shift 21(0), red'n 8(0)) on '\n'
state 5
	list:  list expr.'\n' 
	stmt:  expr.    (8)
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	'\n'  shift 21
	.  error


state 6
	list:  list error.'\n' 

	'\n'  shift 36
	.  error


state 7
	asgn:  VAR.'=' expr 
	expr:  VAR.    (31)

	'='  shift 37
	.  reduce 31 (src line 105)


state 8
	stmt:  PRINT.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 38
	asgn  goto 39

state 9
	stmt:  while.cond stmt end 

	'('  shift 41
	.  error

	cond  goto 40

state 10
	stmt:  if.cond stmt end 
	stmt:  if.cond stmt end else stmt end 

	'('  shift 41
	.  error

	cond  goto 42

state 11
	stmt:  '{'.stmtlist '}' 
	stmtlist: .    (19)

	.  reduce 19 (src line 91)

	stmtlist  goto 43

state 12
	expr:  '('.expr ')' 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 44
	asgn  goto 39

state 13
	expr:  NUMBER.    (29)

	.  reduce 29 (src line 103)


state 14
	expr:  '-'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 45
	asgn  goto 39

state 15
	expr:  BLTIN.'(' expr ')' 

	'('  shift 46
	.  error


state 16
	expr:  NOT.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 47
	asgn  goto 39

state 17
	while:  WHILE.    (15)

	.  reduce 15 (src line 79)


state 18
	if:  IF.    (17)

	.  reduce 17 (src line 85)


state 19
	list:  list asgn '\n'.    (3)

	.  reduce 3 (src line 33)


state 20
	list:  list stmt '\n'.    (4)

	.  reduce 4 (src line 34)


state 21
	list:  list expr '\n'.    (5)

	.  reduce 5 (src line 35)


state 22
	expr:  expr '%'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 48
	asgn  goto 39

state 23
	expr:  expr '+'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 49
	asgn  goto 39

state 24
	expr:  expr '-'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 50
	asgn  goto 39

state 25
	expr:  expr '*'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 51
	asgn  goto 39

state 26
	expr:  expr '/'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 52
	asgn  goto 39

state 27
	expr:  expr '^'.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 53
	asgn  goto 39

state 28
	expr:  expr GT.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 54
	asgn  goto 39

state 29
	expr:  expr GE.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 55
	asgn  goto 39

state 30
	expr:  expr LT.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 56
	asgn  goto 39

state 31
	expr:  expr LE.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 57
	asgn  goto 39

state 32
	expr:  expr EQ.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 58
	asgn  goto 39

state 33
	expr:  expr NE.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 59
	asgn  goto 39

state 34
	expr:  expr AND.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 60
	asgn  goto 39

state 35
	expr:  expr OR.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 61
	asgn  goto 39

state 36
	list:  list error '\n'.    (6)

	.  reduce 6 (src line 36)


state 37
	asgn:  VAR '='.expr 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 62
	asgn  goto 39

38: shift/reduce conflict (shift 24(6), red'n 9(0)) on '-'
state 38
	stmt:  PRINT expr.    (9)
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 9 (src line 43)


state 39
	expr:  asgn.    (32)

	.  reduce 32 (src line 106)


state 40
	stmt:  while cond.stmt end 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	PRINT  shift 8
	WHILE  shift 17
	IF  shift 18
	'-'  shift 14
	NOT  shift 16
	'{'  shift 11
	'('  shift 12
	.  error

	expr  goto 64
	asgn  goto 39
	stmt  goto 63
	while  goto 9
	if  goto 10

state 41
	cond:  '('.expr ')' 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 65
	asgn  goto 39

state 42
	stmt:  if cond.stmt end 
	stmt:  if cond.stmt end else stmt end 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	PRINT  shift 8
	WHILE  shift 17
	IF  shift 18
	'-'  shift 14
	NOT  shift 16
	'{'  shift 11
	'('  shift 12
	.  error

	expr  goto 64
	asgn  goto 39
	stmt  goto 66
	while  goto 9
	if  goto 10

state 43
	stmt:  '{' stmtlist.'}' 
	stmtlist:  stmtlist.'\n' 
	stmtlist:  stmtlist.stmt 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	PRINT  shift 8
	WHILE  shift 17
	IF  shift 18
	'-'  shift 14
	NOT  shift 16
	'\n'  shift 68
	'{'  shift 11
	'}'  shift 67
	'('  shift 12
	.  error

	expr  goto 64
	asgn  goto 39
	stmt  goto 69
	while  goto 9
	if  goto 10

state 44
	expr:  '(' expr.')' 
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	')'  shift 70
	.  error


state 45
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  '-' expr.    (30)
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'^'  shift 27
	.  reduce 30 (src line 104)


state 46
	expr:  BLTIN '('.expr ')' 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	'-'  shift 14
	NOT  shift 16
	'('  shift 12
	.  error

	expr  goto 71
	asgn  goto 39

state 47
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  NOT expr.    (42)

	'^'  shift 27
	.  reduce 42 (src line 116)


state 48
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (23)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 23 (src line 97)


state 49
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (24)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 24 (src line 98)


state 50
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (25)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 25 (src line 99)


state 51
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (26)
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'^'  shift 27
	.  reduce 26 (src line 100)


state 52
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (27)
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'^'  shift 27
	.  reduce 27 (src line 101)


state 53
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr '^' expr.    (28)
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'^'  shift 27
	.  reduce 28 (src line 102)


state 54
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr GT expr.    (34)
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 34 (src line 108)


state 55
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr GE expr.    (35)
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 35 (src line 109)


state 56
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr LT expr.    (36)
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 36 (src line 110)


state 57
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr LE expr.    (37)
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 37 (src line 111)


state 58
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr EQ expr.    (38)
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 38 (src line 112)


state 59
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr NE expr.    (39)
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 39 (src line 113)


state 60
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr AND expr.    (40)
	expr:  expr.OR expr 

	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 40 (src line 114)


state 61
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr OR expr.    (41)

	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 41 (src line 115)


state 62
	asgn:  VAR '=' expr.    (7)
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 7 (src line 39)


state 63
	stmt:  while cond stmt.end 
	end: .    (18)

	.  reduce 18 (src line 88)

	end  goto 72

64: shift/reduce conflict (shift 24(6), red'n 8(0)) on '-'
state 64
	stmt:  expr.    (8)
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	.  reduce 8 (src line 42)


state 65
	cond:  '(' expr.')' 
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	')'  shift 73
	.  error


state 66
	stmt:  if cond stmt.end 
	stmt:  if cond stmt.end else stmt end 
	end: .    (18)

	.  reduce 18 (src line 88)

	end  goto 74

state 67
	stmt:  '{' stmtlist '}'.    (13)

	.  reduce 13 (src line 74)


state 68
	stmtlist:  stmtlist '\n'.    (20)

	.  reduce 20 (src line 92)


state 69
	stmtlist:  stmtlist stmt.    (21)

	.  reduce 21 (src line 93)


state 70
	expr:  '(' expr ')'.    (22)

	.  reduce 22 (src line 96)


state 71
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'^' expr 
	expr:  BLTIN '(' expr.')' 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 

	OR  shift 35
	AND  shift 34
	GT  shift 28
	GE  shift 29
	LT  shift 30
	LE  shift 31
	EQ  shift 32
	NE  shift 33
	'%'  shift 22
	'+'  shift 23
	'-'  shift 24
	'*'  shift 25
	'/'  shift 26
	'^'  shift 27
	')'  shift 75
	.  error


state 72
	stmt:  while cond stmt end.    (10)

	.  reduce 10 (src line 44)


state 73
	cond:  '(' expr ')'.    (14)

	.  reduce 14 (src line 76)


74: shift/reduce conflict (shift 77(0), red'n 11(0)) on ELSE
state 74
	stmt:  if cond stmt end.    (11)
	stmt:  if cond stmt end.else stmt end 

	ELSE  shift 77
	.  reduce 11 (src line 54)

	else  goto 76

state 75
	expr:  BLTIN '(' expr ')'.    (33)

	.  reduce 33 (src line 107)


state 76
	stmt:  if cond stmt end else.stmt end 

	NUMBER  shift 13
	VAR  shift 7
	BLTIN  shift 15
	PRINT  shift 8
	WHILE  shift 17
	IF  shift 18
	'-'  shift 14
	NOT  shift 16
	'{'  shift 11
	'('  shift 12
	.  error

	expr  goto 64
	asgn  goto 39
	stmt  goto 78
	while  goto 9
	if  goto 10

state 77
	else:  ELSE.    (16)

	.  reduce 16 (src line 82)


state 78
	stmt:  if cond stmt end else stmt.end 
	end: .    (18)

	.  reduce 18 (src line 88)

	end  goto 79

state 79
	stmt:  if cond stmt end else stmt end.    (12)

	.  reduce 12 (src line 63)


33 terminals, 11 nonterminals
43 grammar rules, 80/8000 states
5 shift/reduce, 0 reduce/reduce conflicts reported
60 working sets used
memory: parser 75/120000
60 extra closures
367 shift entries, 1 exceptions
40 goto entries
35 entries saved by goto default
Optimizer space used: output 262/120000
262 table entries, 61 zero
maximum spread: 33, maximum offset: 78
